css/style_admin.css
body {
    font-family: Arial, Helvetica, sans-serif;
    background-color: #5a4e28;
}

header {
    text-align: center;
}

h1 {
    margin: 0 0 25px 0;
    color: #F8F8F8;
    background-color: #272727;
    padding: 25px;
    border-radius: 25px;
    text-align: center;
    font-size: 48px;
    text-transform: uppercase;
    font-family: 'Raleway', sans-serif;
    border: 2px solid #C3A93F;
}

h2,
p.bienvenu {
    font-size: 36px;
    color: #F8F8F8;
    text-align: center;
    font-family: 'Raleway', sans-serif;
}

p {
    font-family: 'Raleway', sans-serif;
}

nav {
    background-color: #222222;
    padding: 10px;
    border-radius: 25px;
    display: flex;
    justify-content: center;
    gap: 15px;
    margin-bottom: 15px;
    border: 2px solid #C3A93F;
}

main {
    color: #F8F8F8;
    background-color: #222222;
    border-radius: 25px;
    padding: 15px;
    border: 2px solid #C3A93F;

    div.conteneur {
        display: grid;
        grid-template-columns: 1fr 1fr;
        border: 3px solid #C3A93F;
    }

    div.reservations,
    div.statistiques {
        margin: 0 auto;
        text-align: center;
        width: 100%;
        padding-bottom: 14px;
    }

    div.reservations {
        border-right: 3px solid #C3A93F;
    }

    a.btn-reserver,
    a.inactif {
        margin-bottom: 80px;
        background-color: #F5CC00;
    }
}

.partie-repas {
    display: flex;
    align-items: center;
}

p.courriel {
    margin-left: 8px;
}

.titre-section {
    font-size: 28px;
    font-weight: bold;
    text-decoration: underline;
}

.une-reservation,
.une-statistique {
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid #C3A93F;
    margin-bottom: 12px;
    padding: 0 20px;
}

.une-reservation a {
    height: 20px;
}

.btn-reservation {
    display: flex;
    flex-direction: column;

    a {
        margin-bottom: 8px;
    }
}

a.modifier {
    width: 90px;
}

a,
input.modifier,
input.ajouter {
    border: none;
    padding: 10px;
    border-radius: 50px;
    text-decoration: none;
    color: black;
    font-size: larger;
    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2);
    text-align: center;
}

a.inactif {
    color: grey;
    opacity: 0.5f;
    text-decoration: none;
    pointer-events: none;
}

input,
select {
    font-size: 16px;
    padding: 2px;
    margin-bottom: 5px;
}

form p {
    font-weight: bold;
}

a,
input {
    &.ajouter {
        background-color: #acf046;
    }

    &.ajout {
        background-color: #acf046;
        height: 20px;
    }

    &.supprimer {
        background-color: #d43b3b;
        margin-left: 20px;
    }

    &.modifier {
        background-color: #F5CC00;
        margin-left: auto;
    }

    &.changement_page {
        background-color: #F5CC00;
    }

    &.deconnexion {
        background-color: #d43b3b;
        margin-left: auto;
    }
}

.un_item {
    font-size: large;
    display: flex;
    align-items: center;
    border: 1px solid #000000;
    border-bottom: none;
    padding: 10px;
}

.dernier_item {
    border-bottom: 1px solid #000000;
}

.tete_liste {
    display: flex;
    align-items: center;
    gap: 8px;
}

.bienvenu {
    text-align: center;
    font-size: 38px;
    font-weight: bold;
}

p.item_liste_repas {
    margin: 0 8px;
}

p.partie_liste_repas {
    margin-left: 8px;
}

.action_reussie {
    color: #2bff00;
}

.telecharger {
    border: none;
    padding: 10px;
    border-radius: 50px;
    text-decoration: none;
    text-align: center;
    color: black;
    font-size: larger;
    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2);
    background-color: #F5CC00;
}

.reservation-infos {
    display: flex;
    flex-direction: column;

    p {
        margin-right: auto;
    }
}

form {
    background-color: #2e2e2e;
    border-radius: 20px;
    max-width: 600px;
    margin: 0 auto;
    margin-top: 40px;
    padding: 60px;
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
    font-family: 'Roboto', sans-serif;
    border: 2px solid #C3A93F;
}

form div {
    margin-bottom: 20px;
}

form p {
    margin-bottom: 8px;
    font-weight: bold;
    color: #F8F8F8;
}

form input,
form select {
    width: 100%;
    padding: 12px 15px;
    border: 2px solid #cfd8cf;
    border-radius: 10px;
    font-size: 1em;
    font-family: 'Roboto', sans-serif;
    background-color: #F8F8F8;
    transition: 0.3s border-color;
}

form input {
    width: 94%;
}

form input:focus,
form select:focus {
    border-color: #2e4c3f;
    outline: none;
}

.form-telecharger {
    background: none;
    border-radius: 0;
    max-width: none;
    margin-top: 0;
    padding: 0;
    box-shadow: none;
    font-family: 'Roboto', sans-serif;
    border: none;
}

.erreur {
    color: #ff0000;
}

.boutons {
    padding-top: 8px;
}

@media (max-width: 992px) {
    header {
        max-width: 962px;
    }

    nav {
        background-color: #374d5c;
        padding: 10px;
        border-radius: 25px;
        display: grid;
        justify-content: center;
        gap: 15px;
        margin-bottom: 15px;
    }

    h1 {
        font-size: 32px;
    }

    h2 {
        font-size: 24px;
    }

    a,
    input {
        font-size: 16px;

        &.ajout {
            height: 20px;
            margin-bottom: 8px;
        }

        &.supprimer {
            margin-left: 20px;
            margin: 8px auto;
        }

        &.modifier {
            margin: 8px auto;
        }
    }

    .un_item {
        text-align: center;
        flex-direction: column;
        justify-content: center;
    }

    .partie-repas {
        display: block;
    }

    .tete_liste {
        flex-direction: column;
    }
}


@media (max-width: 360px) {
    header {
        max-width: 330px;
    }

    main {
        max-width: 330px;
    }

    a,
    input {
        font-size: 16px;

        &.ajout {
            height: 20px;
            margin-bottom: 8px;
        }

        &.supprimer {
            margin-left: 20px;
            margin: 8px auto;
        }

        &.modifier {
            margin: 8px auto;
        }
    }
}

